// Auto-generated Protocol Buffer schema
// Generated at: 2025-09-07T15:57:33.840Z
// Source: JSON configuration structure

syntax = "proto3";

package codeuchain;

message Level1 {
  // Deep nesting test
  string level2 = 1;
}

message NestedObject {
  Level1 level1 = 1;
}

message TestConfig {
  // Test Configuration
  string languageName = 1;
  // Bidirectional Hybrid Test
  string title = 2;
  // Testing write-back functionality
  string heroDescription = 3;
  // https://github.com/codeuchain/codeuchain
  string sourceLink = 4;
  // ../test.html
  string logoLink = 5;
  // 2.1.0
  string version = 6;
  // Test Company
  string company = 7;
  // https://github.com/test/repo
  string repository = 8;
  // Updated during test
  string customField = 9;
  NestedObject nestedObject = 10;
  repeated string arrayField = 11;
  // Added in update
  string newField = 12;
}